@@ -4,6 +4,8 @@ S3method(colformat_char,complextable)
 S3method(colformat_char,regulartable)
 S3method(colformat_int,complextable)
 S3method(colformat_int,regulartable)
+S3method(colformat_lgl,complextable)
+S3method(colformat_lgl,regulartable)
 S3method(colformat_num,complextable)
 S3method(colformat_num,regulartable)
 S3method(dim,flextable)
@@ -26,6 +28,7 @@ export(border_outer)
 export(border_remove)
 export(colformat_char)
 export(colformat_int)
+export(colformat_lgl)
 export(colformat_num)
 export(color)
 export(delete_part)
