@@ -27,6 +27,6 @@ autofit(ft)
 }
 \seealso{
 Other columns formatters: \code{\link{colformat_int}},
-  \code{\link{colformat_num}}
+  \code{\link{colformat_lgl}}, \code{\link{colformat_num}}
 }
 \concept{columns formatters}
