@@ -33,6 +33,6 @@ autofit(ft)
 }
 \seealso{
 Other columns formatters: \code{\link{colformat_char}},
-  \code{\link{colformat_num}}
+  \code{\link{colformat_lgl}}, \code{\link{colformat_num}}
 }
 \concept{columns formatters}
